compiler/test-data/parser/blueprint/errors/unclosed_param_list.frel
module blueprint.errors.unclosed_param_list

import test.blueprint

blueprint Greeting(name: String {
    text { name }
}
